@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V01-00-08
+2017-07-05 Mikhail S. Dubrovin
+- add method GUView.move_scene
+
 Tag: V01-00-07
 2017-06-09 Mikhail S. Dubrovin
 - tuning for expmon project
